list-today.txt

c:\exam>python
Python 3.11.5 (tags/v3.11.5:cce6ba9, Aug 24 2023, 14:38:34) [MSC v.1936 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> []
[]
>>> k=[]
>>> type(k)
<class 'list'>
>>> dir([])
['__add__', '__class__', '__class_getitem__', '__contains__', '__delattr__', '__delitem__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getstate__', '__gt__', '__hash__', '__iadd__', '__imul__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__','__reversed__', '__rmul__', '__setattr__', '__setitem__', '__sizeof__', '__str__', '__subclasshook__', 'append', 'clear', 'copy', 'count', 'extend', 'index', 'insert', 'pop', 'remove', 'reverse', 'sort']
>>> a=[1,2,3,4,5,6]
>>> a
[1, 2, 3, 4, 5, 6]
>>> for i in a:
...     print(i)
...
1
2
3
4
5
6
>>> a[0]
1
>>>
>>>
>>> a[1]
2
>>>
>>> a[-1]
6
>>> a[-2]
5
>>> a=[1,2,3,4,5,6,[1.2,2.3,3.4,4.5]]
>>>
>>>
>>> aq
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'aq' is not defined. Did you mean: 'a'?
>>> a
[1, 2, 3, 4, 5, 6, [1.2, 2.3, 3.4, 4.5]]
>>> a=[1,2,3,4,5,6,[1.2,2.3,3.4,4.5],10,12,['a','b','c','d'],33,44]
>>>
>>>
>>>
>>>
>>>
>>> a
[1, 2, 3, 4, 5, 6, [1.2, 2.3, 3.4, 4.5], 10, 12, ['a', 'b', 'c', 'd'], 33, 44]
>>> a[6]
[1.2, 2.3, 3.4, 4.5]
>>> for i in a[6]:
...     print(i)
...
1.2
2.3
3.4
4.5
>>> for i in a[9]:
...     print(i)
...
a
b
c
d
>>> a
[1, 2, 3, 4, 5, 6, [1.2, 2.3, 3.4, 4.5], 10, 12, ['a', 'b', 'c', 'd'], 33, 44]
>>> id(a)
1648333077696
>>>
>>>
>>> a[0]='amitava'
>>> a
['amitava', 2, 3, 4, 5, 6, [1.2, 2.3, 3.4, 4.5], 10, 12, ['a', 'b', 'c', 'd'], 33, 44]
>>> id(a)
1648333077696
>>> #concatenation of LIST
>>>
>>> l1=[1,2,3,4]
>>> l2=[5,6,7,8]
>>>
>>>
>>> l3=l1+l2
>>>
>>> l3
[1, 2, 3, 4, 5, 6, 7, 8]
>>> #Repetion of list
>>>
>>>
>>> l3*3
[1, 2, 3, 4, 5, 6, 7, 8, 1, 2, 3, 4, 5, 6, 7, 8, 1, 2, 3, 4, 5, 6, 7, 8]
>>> l3
[1, 2, 3, 4, 5, 6, 7, 8]
>>> # Slicing of List
>>> #[start:stop:step]
>>>
>>>
>>>
>>> l3
[1, 2, 3, 4, 5, 6, 7, 8]
>>> l3[0:100]
[1, 2, 3, 4, 5, 6, 7, 8]
>>> l3[123:200]
[]
>>> l3[0:]
[1, 2, 3, 4, 5, 6, 7, 8]
>>> l3[2:5]
[3, 4, 5]
>>> l3[2:6:2]
[3, 5]
>>> l3[:3]
[1, 2, 3]
>>> l3[3:]
[4, 5, 6, 7, 8]
>>> l3[:]
[1, 2, 3, 4, 5, 6, 7, 8]
>>> l3[::2]
[1, 3, 5, 7]
>>> l3[1::2]
[2, 4, 6, 8]
>>> #membership operation
>>>
>>>
>>> l3
[1, 2, 3, 4, 5, 6, 7, 8]
>>> 1 in l3
True
>>>
>>>
>>> 1 not in l3
False
>>> 11 not in l3
True
>>>
>>> l3
[1, 2, 3, 4, 5, 6, 7, 8]
>>>
>>>
>>> del(l3[3])
>>> l3
[1, 2, 3, 5, 6, 7, 8]
>>> del(l3[:2])
>>> l3
[3, 5, 6, 7, 8]
>>> dir([])
['__add__', '__class__', '__class_getitem__', '__contains__', '__delattr__', '__delitem__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getstate__', '__gt__', '__hash__', '__iadd__', '__imul__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__','__reversed__', '__rmul__', '__setattr__', '__setitem__', '__sizeof__', '__str__', '__subclasshook__', 'append', 'clear', 'copy', 'count', 'extend', 'index', 'insert', 'pop', 'remove', 'reverse', 'sort']
>>> l3
[3, 5, 6, 7, 8]
>>> l3.append(100)
>>> l3
[3, 5, 6, 7, 8, 100]
>>> x=[]
>>>
>>>
>>> x.append(10)
>>> x.append(20)
>>> x.append(30)
>>> x
[10, 20, 30]
>>> y=[99,88,77]
>>> x.extend(y)
>>> x
[10, 20, 30, 99, 88, 77]
>>> x
[10, 20, 30, 99, 88, 77]
>>> x
[10, 20, 30, 99, 88, 77]
>>> x.insert(0,1000)
>>> x
[1000, 10, 20, 30, 99, 88, 77]
>>> x.insert(19,1000)
>>> x
[1000, 10, 20, 30, 99, 88, 77, 1000]
>>> x.insert(199999,2000)
>>> x
[1000, 10, 20, 30, 99, 88, 77, 1000, 2000]
>>> x[0]
1000
>>> x[0].append(11)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'int' object has no attribute 'append'
>>> type(x[0])
<class 'int'>
>>> x
[1000, 10, 20, 30, 99, 88, 77, 1000, 2000]
>>> x.sort()
>>> x
[10, 20, 30, 77, 88, 99, 1000, 1000, 2000]
>>> z=x.pop(3)
>>> z
77
>>> x
[10, 20, 30, 88, 99, 1000, 1000, 2000]
>>> a=[1,2,3,3,3,3,3,3,7,8,9,9,9,1,1]
>>> a
[1, 2, 3, 3, 3, 3, 3, 3, 7, 8, 9, 9, 9, 1, 1]
>>> a.remove(3)
>>> a
[1, 2, 3, 3, 3, 3, 3, 7, 8, 9, 9, 9, 1, 1]
>>> q=a.remove(1)
>>> q
>>> a
[2, 3, 3, 3, 3, 3, 7, 8, 9, 9, 9, 1, 1]
>>> a.reverse()
>>> a
[1, 1, 9, 9, 9, 8, 7, 3, 3, 3, 3, 3, 2]
>>> a=[10,11,'a',0]
>>> all(a)
False
>>> a=[10,11,'a',1]
>>> all(a)
True
>>> a=[10,11,'a','']
>>> all(a)
False
>>> ''
''
>>> a''
  File "<stdin>", line 1
    a''
     ^^
SyntaxError: invalid syntax
>>> a=''
>>> a
''
>>> a=[10,11,'a','',0,-1]
>>> all(a)
False
>>> a=[10,11,'a','',10,-1]
>>> all(a)
False
>>> a=[10,11,'a','q',0,-1]
>>> all(a)
False
>>> a=[10,11,'a','q',10,-1]
>>> all(a)
True
>>> a=[True,'True']
>>> all(a)
True
>>> a=[True,'True',False]
>>> all(a)
False
>>> a=[True,'True','False']
>>> all(a)
True
>>> a=[]
>>> all(a)
True
>>> a=[False,'True',False]
>>> all(a)
False
>>> any(a)
True
>>> a=[False]
>>> any(a)
False
>>> a=[]
>>> len(a)
0
>>>
>>> l3
[3, 5, 6, 7, 8, 100]
>>> l3.append(10)
>>> l3.append(10)
>>> l3.append(10)
>>> l3.append(10)
>>> l3
[3, 5, 6, 7, 8, 100, 10, 10, 10, 10]
>>> l3.count()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: list.count() takes exactly one argument (0 given)
>>> l3.count(10)
4
>>>
>>>
>>> l3.max()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'list' object has no attribute 'max'
>>> max(l3)
100
>>>
>>>
>>> min(l3)
3
>>> sum(l3)
169
>>> s='KUSHAL'
>>> s
'KUSHAL'
>>> z=list(s)
>>> z
['K', 'U', 'S', 'H', 'A', 'L']
>>> z
['K', 'U', 'S', 'H', 'A', 'L']
>>>
>>>
>>> z
['K', 'U', 'S', 'H', 'A', 'L']
>>> g=z
>>> g
['K', 'U', 'S', 'H', 'A', 'L']
>>> id(z)
1648330082368
>>> id(g)
1648330082368
>>> z
['K', 'U', 'S', 'H', 'A', 'L']
>>> c=z[:]
>>> c
['K', 'U', 'S', 'H', 'A', 'L']
>>> id(z)
1648330082368
>>> id(c)
1648333068864
>>> z
['K', 'U', 'S', 'H', 'A', 'L']
>>> s=[]
>>> s.append(z)
>>> s
[['K', 'U', 'S', 'H', 'A', 'L']]
>>> d=[]
>>> d.extend(z)
>>> d
['K', 'U', 'S', 'H', 'A', 'L']
>>> id(z)
1648330082368
>>> id(d)
1648333058048
>>> z
['K', 'U', 'S', 'H', 'A', 'L']
>>> t=list(z)
>>> t
['K', 'U', 'S', 'H', 'A', 'L']
>>> id(z)
1648330082368
>>> id(t)
1648333148224
>>>
